content/versioned/2.0/start/install.fr.mdx
---
title: Installation
description: Ajoutez le plugin Gradle Nucleus à un projet Kotlin pour cibler macOS, Linux et Windows depuis un seul build.
---

import { Callout } from 'fumadocs-ui/components/callout';

Dans ce tutoriel, vous allez ajouter le plugin Gradle Nucleus à un projet Kotlin. Une fois le plugin
appliqué, le même build peut compiler, lancer et empaqueter une application de bureau pour macOS,
Linux et Windows.

## Avant de commencer

Nucleus s'appuie sur Compose Multiplatform et demande :

- **JDK 17 ou version ultérieure** dans votre `PATH`.
- **Kotlin 2.0 ou version ultérieure** — Compose Multiplatform exige Kotlin 2.x.
- **Gradle 8.0 ou version ultérieure**. Le wrapper Gradle fourni dans les nouveaux projets suffit.

<Callout type="info">
Le JDK 25 ou version ultérieure n'est requis que pour générer le cache AOT (`enableAotCache` dans
`nativeDistributions`). N'importe quel JDK 17+ convient pour le développement.
</Callout>

## Compatibilité

| Version Nucleus | Version Kotlin | Version Compose |
|-----------------|----------------|-----------------|
| 2.0.0           | 2.4.0          | 1.11.1          |

## Appliquer le plugin

Dans le `build.gradle.kts` de votre module, appliquez le plugin Nucleus aux côtés des plugins Kotlin et Compose :

```kotlin title="build.gradle.kts"
plugins {
    kotlin("jvm") version "2.4.0"
    id("org.jetbrains.compose") version "1.11.1"
    id("dev.nucleusframework") version "<version>"
}
```

Le bloc `plugins` résout `dev.nucleusframework` depuis le Gradle Plugin Portal ; aucun dépôt
`pluginManagement` supplémentaire n'est nécessaire.

## Ajouter les dépôts

Les modules runtime de Nucleus sont publiés sur Maven Central sous le groupe `dev.nucleusframework`.
Ajoutez les dépôts dont le plugin et son runtime ont besoin :

```kotlin title="build.gradle.kts"
repositories {
    mavenCentral()
    google()
}
```

## Vérifier que le plugin est appliqué

L'application du plugin enregistre un groupe de tâches `nucleus`. Listez ses tâches pour confirmer que
le plugin est chargé :

```shell
./gradlew tasks --group nucleus
```

Si la commande affiche les tâches du groupe, le plugin est appliqué et vous pouvez commencer à construire.

## Et ensuite

- [Quickstart](/docs/start/quickstart) — écrivez une fonction `main`, lancez une fenêtre Tao native et empaquetez un installeur.
- [Project setup](/docs/start/project-setup) — dépôts, propriétés Gradle, toolchains JDK et layout multi-module.
- [Configuration](/docs/start/configuration) — le DSL `nucleus { }` complet.
